@@ -19,6 +19,8 @@ import org.junit.jupiter.params.provider.ValueSource;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -262,16 +264,16 @@ final class CryptCodecProviderTest extends AbstractBaseTest {
     private static void doCheckMSISAM2001Db(Database db) throws Exception {
         assertThat(db.getFileFormat()).isEqualTo(Database.FileFormat.MSISAM);
 
-        assertThat(db.getTableNames()).containsExactlyInAnyOrderElementsOf(Set.of(
+        assertThat(db.getTableNames()).containsExactlyInAnyOrderElementsOf(new HashSet<>(Arrays.asList(
             "ACCT", "ADDR", "ADV", "ADV_SUM", "Advisor Important Dates Custom Pool", "Asset Allocation Custom Pool", "AUTO", "AWD", "BGT", "BGT_BKT", "BGT_ITM", "CAT", "CESRC",
             "CLI", "CLI_DAT", "CNTRY", "CRIT", "CRNC", "CRNC_EXCHG", "CT", "DHD", "FI", "Goal Custom Pool", "Inventory Custom Pool", "ITM", "IVTY", "LOT", "LSTEP", "MAIL", "MCSRC", "PAY", "PGM",
             "PMT", "PORT_REC", "Portfolio View Custom Pool", "POS_STMT", "PRODUCT", "PROJ", "PROV_FI", "PROV_FI_PAY", "Report Custom Pool", "SAV_GOAL", "SEC", "SEC_SPLIT", "SIC", "SOQ", "SP", "STMT",
             "SVC", "Tax Rate Custom Pool", "TAXLINE", "TMI", "TRIP", "TRN", "TRN_INV", "TRN_INVOICE", "TRN_OL", "TRN_SPLIT", "TRN_XFER", "TXSRC", "VIEW", "Worksheet Custom Pool", "XACCT", "XMAPACCT",
-            "XMAPSAT", "XPAY"));
+            "XMAPSAT", "XPAY")));
 
         Table t = db.getTable("CRNC");
 
-        Set<String> cols = Set.of("hcrnc", "szName", "lcid", "szIsoCode", "szSymbol");
+        Set<String> cols = new HashSet<>(Arrays.asList("hcrnc", "szName", "lcid", "szIsoCode", "szSymbol"));
 
         assertThat(t.getDefaultCursor().getNextRow(cols)).isEqualTo(createExpectedRow("hcrnc", 1, "szName", "Argentinean peso", "lcid", 11274, "szIsoCode", "ARS", "szSymbol", "/ARSUS"));
 
@@ -285,17 +287,17 @@ final class CryptCodecProviderTest extends AbstractBaseTest {
     private static void doCheckMSISAM2002Db(Database db) throws Exception {
         assertThat(db.getFileFormat()).isEqualTo(Database.FileFormat.MSISAM);
 
-        assertThat(db.getTableNames()).containsExactlyInAnyOrderElementsOf(Set.of(
+        assertThat(db.getTableNames()).containsExactlyInAnyOrderElementsOf(new HashSet<>(Arrays.asList(
             "ACCT", "ADDR", "ADV", "ADV_SUM", "Advisor Important Dates Custom Pool", "Asset Allocation Custom Pool", "AUTO", "AWD", "BGT", "BGT_BKT", "BGT_ITM", "BILL", "BILL_FLD",
             "CAT", "CESRC", "CLI", "CLI_DAT", "CNTRY", "CRIT", "CRNC", "CRNC_EXCHG", "CT", "DHD", "FI", "Goal Custom Pool", "Inventory Custom Pool", "ITM", "IVTY", "LOT", "LSTEP", "MAIL", "MCSRC",
             "PAY", "PGM", "PMT", "PORT_REC", "Portfolio View Custom Pool", "POS_STMT", "PRODUCT", "PROJ", "PROV_FI", "PROV_FI_PAY", "Report Custom Pool", "SAV_GOAL", "SEC", "SEC_SPLIT", "SIC",
             "SOQ", "SP", "STMT", "SVC", "Tax Rate Custom Pool", "TAXLINE", "TMI", "TRIP", "TRN", "TRN_INV", "TRN_INVOICE", "TRN_OL", "TRN_SPLIT", "TRN_XFER", "TXSRC", "UIE", "UKSavings", "UKWiz",
             "UKWizAddress", "UKWizCompanyCar", "UKWizLoan", "UKWizMortgage", "UKWizPenScheme", "UKWizPension", "UKWizWillExecutor", "UKWizWillGift", "UKWizWillGuardian", "UKWizWillLovedOne",
-            "UKWizWillMaker", "UKWizWillPerson", "UKWizWillResidue", "UNOTE", "VIEW", "Worksheet Custom Pool", "XACCT", "XBAG", "XMAPACCT", "XMAPSAT", "XPAY"));
+            "UKWizWillMaker", "UKWizWillPerson", "UKWizWillResidue", "UNOTE", "VIEW", "Worksheet Custom Pool", "XACCT", "XBAG", "XMAPACCT", "XMAPSAT", "XPAY")));
 
         Table t = db.getTable("CRNC");
 
-        Set<String> cols = Set.of("hcrnc", "szName", "lcid", "szIsoCode", "szSymbol");
+        Set<String> cols = new HashSet<>(Arrays.asList("hcrnc", "szName", "lcid", "szIsoCode", "szSymbol"));
 
         assertThat(t.getDefaultCursor().getNextRow(cols)).isEqualTo(createExpectedRow("hcrnc", 1, "szName", "Argentinian peso", "lcid", 11274, "szIsoCode", "ARS", "szSymbol", "/ARSUS"));
 
@@ -309,17 +311,17 @@ final class CryptCodecProviderTest extends AbstractBaseTest {
     private static void doCheckMSISAM2008Db(Database db) throws Exception {
         assertThat(db.getFileFormat()).isEqualTo(Database.FileFormat.MSISAM);
 
-        assertThat(db.getTableNames()).containsExactlyInAnyOrderElementsOf(Set.of(
+        assertThat(db.getTableNames()).containsExactlyInAnyOrderElementsOf(new HashSet<>(Arrays.asList(
             "ACCT", "ADDR", "ADV", "ADV_SUM", "Advisor Important Dates Custom Pool", "Asset Allocation Custom Pool", "AUTO", "AWD", "BGT", "BGT_BKT", "BGT_ITM", "BILL",
             "BILL_FLD", "CAT", "CESRC", "CLI", "CLI_DAT", "CNTRY", "CRIT", "CRNC", "CRNC_EXCHG", "CT", "DHD", "Feature Expiration Custom Pool", "FI", "Inventory Custom Pool", "ITM", "IVTY", "LOT",
             "LSTEP", "MAIL", "MCSRC", "PAY", "PGM", "PM_RPT", "PMT", "PORT_REC", "Portfolio View Custom Pool", "POS_STMT", "PREF", "PREF_LIST", "PRODUCT", "PROJ", "PROV_FI", "PROV_FI_PAY",
             "Report Custom Pool", "SAV_GOAL", "SCHE_TASK", "SEC", "SEC_SPLIT", "SIC", "SOQ", "SP", "STMT", "SVC", "Tax Rate Custom Pool", "Tax Scenario Custom Pool", "TAXLINE", "TMI", "TRIP", "TRN",
             "TRN_INV", "TRN_INVOICE", "TRN_OL", "TRN_SPLIT", "TRN_XFER", "TXSRC", "UI_VIEW", "UIE", "UNOTE", "VIEW", "Worksheet Custom Pool", "X_FMLA", "X_ITM", "X_META_REF", "X_PARM", "XACCT",
-            "XBAG", "XMAPACCT", "XMAPSAT", "XMAPSEC", "XPAY", "XSYNCCHUNK"));
+            "XBAG", "XMAPACCT", "XMAPSAT", "XMAPSEC", "XPAY", "XSYNCCHUNK")));
 
         Table t = db.getTable("CRNC");
 
-        Set<String> cols = Set.of("hcrnc", "szName", "lcid", "szIsoCode", "szSymbol");
+        Set<String> cols = new HashSet<>(Arrays.asList("hcrnc", "szName", "lcid", "szIsoCode", "szSymbol"));
 
         assertThat(t.getDefaultCursor().getNextRow(cols)).isEqualTo(createExpectedRow("hcrnc", 1, "szName", "Argentine peso", "lcid", 11274, "szIsoCode", "ARS", "szSymbol", "/ARSUS"));
 
